@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
   <head>
-    <title>Ganymede File Glossary 0.99.7 - 13 October 1999</title>
+    <title>Ganymede File Glossary 0.99.8 - 23 November 1999</title>
   </head>
 
   <body BGCOLOR="#FFFFFF">
 
 <IMG SRC="gifs/ganymede_title.gif" HEIGHT=200 WIDTH=560 alt = "Ganymede">
-<h1><FONT FACE="Arial, Helvetica">Ganymede File Glossary 0.99.7 - 13 October 1999</FONT></h1>
+<h1><FONT FACE="Arial, Helvetica">Ganymede File Glossary 0.99.8 - 23 November 1999</FONT></h1>
 <hr>
     <p>This page contains descriptions of various significant files that are part
     of the Ganymede package.</p>
@@ -683,7 +683,7 @@
     <hr>
     <address><a href="mailto:broccol@csdsun1.arlut.utexas.edu">Jonathan Abbey</a></address>
     <!-- hhmts start -->
-Last modified: Wed Oct 13 15:08:38 CDT 1999
+Last modified: Mon Nov 22 14:37:51 CST 1999
 <!-- hhmts end -->
   </body>
 </html>
