@@ -1,11 +1,11 @@
 Ganymede Release 0.99.8
-November ??, 1999
+November 23, 1999
 CHANGES
 ---------------------------------------------
 
 -------------------- Changes from 0.99.7 to 0.99.8 -------------------
 
-RELEASE DATE: November ?? , 1999
+RELEASE DATE: November 23 , 1999
 
 1. [SERVER] Included regexp info in schema html dump
 
@@ -240,11 +240,19 @@ This change bumps the DBStore revision numbers to
 18. [SERVER] Server object accounting fix
 
 There was an opportunity for the server's objects checked-out
-accounting to get out of sync if an object creation operation
-was not able to perform custom object initialization.
+accounting to get out of sync if an object creation operation was not
+able to proceed to completion as a result of a failure to perform
+the custom object initialization.
 
 Now the server's object accounting should be reliable under
 all circumstances.
+
+19. [SCHEMA] Updated BSD and Linux schema kits to support MD5 hashed passwords
+
+I have put preliminary (but functional) support into the Linux and BSD
+kits for MD5-hashed passwords.
+
+Someone will have to let me know how well this works.
 
 -------------------- Changes from 0.99.6 to 0.99.7 -------------------
 
